Minor alignment and lighthouse fixes

--- a/components/common/Footer/Footer.module.css
+++ b/components/common/Footer/Footer.module.css
@@ -4,7 +4,7 @@
   background-color: #0e1739;
   gap: 1rem;
   padding: 2rem;
-  color: #f8f8f853;
+  color: #f8f8f88c;
 }
 
 .about > p {
