--- a/components/home/FeaturedEvents.module.css
+++ b/components/home/FeaturedEvents.module.css
@@ -10,7 +10,7 @@
   padding-top: 2rem;
 }
 
-.title h3 {
+.title h2 {
   font-size: 2rem;
   text-transform: uppercase;
 }
